--- a/css/use-cases.css
+++ b/css/use-cases.css
@@ -139,6 +139,9 @@
     padding-top: 1rem;
     border-top: 1px solid rgba(255, 255, 255, 0.1);
     line-height: 1.4;
+    font-family: "Chakra Petch", sans-serif;
+    font-weight: 500;
+    letter-spacing: -0.01em;
 }
 
 /* Carousel Navigation */
